refactor: added proguard and native-image builds